Fix overlapping next page directive - Add additional padding to body (row) of hero

--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -39,6 +39,6 @@ h1, .h1 {
 }
 
 .row {
-    padding-top: $navbar-height+$spacer*2;
-    padding-bottom: $spacer*2;
+    padding-top: $navbar-height+$spacer*4;
+    padding-bottom: $spacer*6;
 }
